--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/Jennie/git/GoBeyond/libs/mockito-all-1.9.0.jar"/>
-	<classpathentry kind="lib" path="C:/jruby-1.6.7.2/lib/jruby.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jennie/git/GoBeyond/libs/jruby.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
